[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt_api_korbit"
version = "0.1.1"
description = "Korbit exchange plugin for bt_api framework - Korean cryptocurrency exchange"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
keywords = [
    "bt_api",
    "korbit",
    "cryptocurrency",
    "exchange",
    "trading",
    "algorithmic-trading",
    "crypto",
    "korean"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_korbit"
Documentation = "https://bt-api-korbit.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_korbit"
Issues = "https://github.com/cloudQuant/bt_api_korbit/issues"
Changelog = "https://github.com/cloudQuant/bt_api_korbit/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_korbit"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "UP", "E", "F", "W", "TRY003", "TC"]
ignore = ["E501", "TC002", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"src/bt_api_korbit/plugin.py" = ["TC002"]
"src/bt_api_korbit/registry_registration.py" = ["TC002"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
